--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,4 +1,4 @@
-<form method="post" action="/" enctype="multipart/form-data">
+<form method="post" action="/seo" enctype="multipart/form-data">
     <input type="file" data-filename-placement="inside" title="Выберите файл" name="file"/>
     <input type="submit">
 </form>
