--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,13 +1,21 @@
-<form method="post" action="/seo" enctype="multipart/form-data">
-    <input type="file" data-filename-placement="inside" title="Выберите файл" name="file"/>
-    <input type="submit">
-</form>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+</head>
 
+<body>
+    <form method="post" action="/seo" enctype="multipart/form-data">
+        <input type="file" data-filename-placement="inside" title="Выберите файл" name="file"/>
+        <input type="submit">
+    </form>
 
-[% FOR g IN group %]
-    <b>[% g.name %]</b><br>
-    [% FOR w IN g.word.sort %]
-        [% w %]<br>
+    [% FOR g IN group %]
+        <b>[% g.name %]</b><br>
+        [% FOR w IN g.word.sort %]
+            [% w %]<br>
+        [% END %]
+        <br>
     [% END %]
-    <br>
-[% END %]
+</body>
+</html>
